--- a/my-app-name/package.json
+++ b/my-app-name/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatbot",
+  "name": "my-app-name",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,9 +12,9 @@
     "@ai-sdk/google": "^0.0.10",
     "@google/generative-ai": "^0.11.1",
     "@tabler/icons-react": "^3.3.0",
-    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
     "postcss": "^8",
